# SimpleMenu

./: Build.sh  CMakeLists.txt  README.md  Run.sh  TODO.todo  Test.sh
src/: CMakeLists.txt  main.cpp
src/Engine/: CMakeLists.txt  Precomp.h  inputs.cpp  inputs.h  shader.cpp  shader.h  window.cpp  window.h
src/Engine/Renderer/: Batched.cpp  Batched.h  CMakeLists.txt  Renderer.cpp  Renderer.h  transparency.cpp  transparency.h  unoptimized.cpp  unoptimized.h
src/Engine/Renderer/images/: CMakeLists.txt  image.cpp  image.h
src/Engine/Renderer/postprocessor/: CMakeLists.txt  renderStep.cpp  renderStep.h
src/images/: CMakeLists.txt  packer.py
src/lib/: CMakeLists.txt
src/lib/freetype/objs/: apinames  autofit.lo  bdf.lo  cff.lo  dlg.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  ftbitmap.lo  ftbzip2.lo  ftcache.lo  ftcid.lo  ftdebug.lo  ftfstype.lo  ftgasp.lo  ftglyph.lo  ftgxval.lo  ftgzip.lo  ftinit.lo  ftlzw.lo  ftmm.lo  ftotval.lo  ftpatent.lo  ftpfr.lo  ftstroke.lo  ftsynth.lo  ftsystem.lo  fttype1.lo  ftwinfnt.lo  libfreetype.la  pcf.lo  pfr.lo  psaux.lo  pshinter.lo  psnames.lo  raster.lo  sdf.lo  sfnt.lo  smooth.lo  svg.lo  (+5 more)
src/lib/glad/: CMakeLists.txt
src/lib/glad/src/: glad.c
src/lib/stbimage/: CMakeLists.txt  stb_image.cpp
src/shaders/: Batch.frag  Batch.vert  CMakeLists.txt  invert.frag  invert.vert  moveShader.py  standard.frag  standard.vert
src/shaders/Default/: standard.frag
src/shaders/Invert/: standard.frag
src/shaders/MandelBrot/: standard.frag  standard.vert
src/shaders/Sharpen/: standard.frag  standard.vert
(+6 files in other folders)
